# DsyGameEngine

./: DsyGameEngine.code-workspace  README.md  build_and_run.bat
.history/.trae/rules/: project_rules_20250917165634.md  project_rules_20250924153620.md  project_rules_20250924153621.md  project_rules_20250924153624.md  project_rules_20250924153636.md
.history/Docs/: CodingStyle_20250815180906.md  CodingStyle_20250924154038.md  CodingStyle_20250924154041.md  CodingStyle_20250924154833.md  CodingStyle_20250924154845.md  DevelopmentPlan_20250917183354.md  DevelopmentProgress_20250918105955.md  DevelopmentProgress_20250919162005.md  DevelopmentProgress_20250919170233.md
.history/Source/: CMakeLists_20250918102314.txt  CMakeLists_20250919163407.txt  CMakeLists_20250919163742.txt
.history/Source/Runtime/: CMakeLists_20250918104455.txt  CMakeLists_20250918184801.txt  CMakeLists_20250918184813.txt  CMakeLists_20250918184815.txt  CMakeLists_20250918203507.txt  CMakeLists_20250918203529.txt  CMakeLists_20250922105616.txt  CMakeLists_20250922105619.txt  CMakeLists_20250922105624.txt  CMakeLists_20250922105626.txt  CMakeLists_20250922105628.txt  CMakeLists_20250922105634.txt  CMakeLists_20250922105635.txt  CMakeLists_20250922105638.txt  CMakeLists_20250922105651.txt  CMakeLists_20250922105715.txt  CMakeLists_20250922105722.txt  CMakeLists_20250922105726.txt  CMakeLists_20250922105730.txt  CMakeLists_20250922105733.txt  CMakeLists_20250922105738.txt  CMakeLists_20250922105739.txt  CMakeLists_20250922105742.txt  CMakeLists_20250922105745.txt  CMakeLists_20250922105800.txt  CMakeLists_20250922105801.txt  CMakeLists_20250922105813.txt  CMakeLists_20250922105817.txt  CMakeLists_20250922105900.txt  CMakeLists_20250922105904.txt  CMakeLists_20250922105948.txt  CMakeLists_20250922105952.txt  CMakeLists_20250922105954.txt  CMakeLists_20250922105959.txt  CMakeLists_20250922125412.txt  CMakeLists_20250922125414.txt  CMakeLists_20250922125421.txt  CMakeLists_20250922125438.txt  CMakeLists_20250922125441.txt  CMakeLists_20250923160714.txt  (+29 more)
.history/Source/Runtime/Core/: CoreTypes_20250922122803.h  CoreTypes_20250922122824.h  CoreTypes_20250922122828.h  CoreTypes_20250922122829.h  CoreTypes_20250922122832.h  CoreTypes_20250922122834.h  CoreTypes_20250922122842.h  CoreTypes_20250922122845.h  (+5 more)
Content/Shaders/: TrianglePS.hlsl  TriangleVS.hlsl
Docs/: ArchitectureDesign.md  CoreModules.md  DevelopmentPlan.md  DevelopmentProgress.md  DirectoryStructure.md  RenderingSystem.md
Source/: CMakeLists.txt
Source/Empty/: EmptyApplication.cpp
Source/Framework/Common/: BaseApplication.cpp  BaseApplication.h  CoreMinimal.h  GraphicsManager.h  main.cpp
Source/Framework/Interface/: IApplication.h  IRuntimeModule.h
Source/Platform/Windows/: HelloEngine_D2D.cpp  HelloEngine_D3D.cpp  HelloEngine_D3D12.cpp  HelloEngine_Win.c
Source/Platform/Windows/Shader/: D3D.ps  D3D.pso  D3D.vs  D3D.vso  vsoutput.hs
Source/Runtime/: CMakeLists.txt  main.cpp
Source/Runtime/Core/: CoreMinimal.h  CoreTypes.h
Source/Runtime/Core/Logging/: LogSink.h  Logger.cpp
Source/Runtime/RHI/: RHIBuffer.h  RHICommandList.h  RHICommandQueue.h  RHIDefinitions.h  RHIDevice.h  RHIFence.h  RHISwapChain.h  RHITexture.h
Source/Runtime/RHI/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Common.cpp  D3D12Common.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Texture.cpp  D3D12Texture.h
Source/Runtime/Render/: ShaderCompileUtils.cpp  ShaderCompileUtils.h
Tests/: CMakeLists.txt  D3D12DeviceTests.cpp  ShaderCompileTests.cpp
(+251 files in other folders)
